# GarminTurso

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  MCP_GUIDE.md  README.md  example_queries.sql  main.py  pyproject.toml  query_api.py  requirements.txt  setup_mcp.sh  sync.py  test_final.py  test_mcp.sh
.github/: SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CLAUDE.md
scripts/: generate_report.py  mcp_server.py  query_api.py  sync.py
src/: __init__.py  auth.py  collector.py  data_processor.py  enhanced_collector.py  fit_processor.py  garmin_collector.py  intraday_collector.py  report_generator.py  sync_service.py
src/api/: __init__.py
src/charts/: __init__.py
src/collectors/: __init__.py  enhanced_collector.py  fit_processor.py  garmin_collector.py  intraday_collector.py
src/core/: __init__.py  database.py  sync_service.py
src/utils/: __init__.py  data_processor.py  report_generator.py
src/utils/charts/: core_vitals.py
tests/: test_reports.py
